<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/sign"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button26"
        app:layout_constraintVertical_bias="0.435" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/number"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_1"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/_2"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button14"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="228dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.611" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/_6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="309dp" />

    <Button
        android:id="@+id/button23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button23"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button24"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="390dp" />

    <Button
        android:id="@+id/button26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button27"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="472dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="143dp"
        android:layout_height="39dp"
        android:text="@string/calculator"
        android:textColor="#062AED"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/answer"
        android:padding="8dp"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="596dp" />

    <Button
        android:id="@+id/button27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/_sign"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="468dp" />

    <Button
        android:id="@+id/button28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="471dp" />

    <Button
        android:id="@+id/button29"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/__sign"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button30"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:text="@string/_____sign"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="125dp" />

    <Button
        android:id="@+id/button31"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:text="@string/____sign"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="229dp" />

    <Button
        android:id="@+id/button32"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/______sign"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/___sign"
        android:padding="8dp"
        android:textSize="16sp"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="144dp" />

</androidx.constraintlayout.widget.ConstraintLayout>